--- a/0326_assignment1/package.json
+++ b/0326_assignment1/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "0326_assignment1",
+  "name": "mportpolio_2016112661",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "live-server"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "live-server": "^1.2.1"
+  }
 }
